# sim-explorer

./: .buildinfo  .gitignore  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.html  README.html  README.rst  STYLEGUIDE.html  STYLEGUIDE.md  api.html  azure-pipelines.yml  cli.__main__.html  cli.html  cli.sim_explorer.html  fileFormat.cases.html  fileFormat.html  genindex.html  index.html  names.csv  objects.inv  py-modindex.html  pyproject.toml  qa.bat  requirements.txt  ruff.toml  search.html  searchindex.js  sim_explorer.html  tox.ini
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _merge_into_release.yml  _publish_package.yml  _test.yml  _test_future.yml  nightly_build.yml  publish_release.yml
_autosummary/: sim_explorer.assertion.Assertion.html  sim_explorer.assertion.html  sim_explorer.case.Case.html  sim_explorer.case.Cases.html  sim_explorer.case.Results.html  sim_explorer.case.html  sim_explorer.json5.Json5.html  sim_explorer.json5.html  sim_explorer.models.Temporal.html  sim_explorer.models.html  sim_explorer.simulator_interface.SimulatorInterface.html  sim_explorer.simulator_interface.html  sim_explorer.system_interface.SystemInterface.html  sim_explorer.system_interface.html  sim_explorer.system_interface_osp.html  sim_explorer.utils.codegen.html  sim_explorer.utils.html  sim_explorer.utils.logging.html  sim_explorer.utils.paths.html  sim_explorer.utils.types.html
_sources/: api.rst.txt  fileFormat.cases.rst.txt  fileFormat.rst.txt
_sources/_autosummary/: sim_explorer.assertion.rst.txt  sim_explorer.case.Case.rst.txt  sim_explorer.case.Cases.rst.txt  sim_explorer.case.Results.rst.txt  sim_explorer.case.rst.txt  sim_explorer.json5.Json5.rst.txt  sim_explorer.json5.rst.txt  sim_explorer.models.AssertionResult.rst.txt  sim_explorer.simulator_interface.SimulatorInterface.rst.txt  sim_explorer.simulator_interface.rst.txt  sim_explorer.system_interface.SystemInterface.rst.txt  sim_explorer.system_interface.rst.txt  sim_explorer.utils.json5.rst.txt  sim_explorer.utils.logging.rst.txt
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  api.html  cli.html  cli.sim_explorer.html  fileFormat.cases.html  fileFormat.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sim_explorer.html
branch/main/_autosummary/: sim_explorer.case.Case.html  sim_explorer.case.Cases.html  sim_explorer.case.Results.html  sim_explorer.case.html  sim_explorer.exceptions.html  sim_explorer.json5.Json5.html  sim_explorer.json5.html  sim_explorer.models.AssertionResult.html  sim_explorer.simulator_interface.html  sim_explorer.system_interface.html  sim_explorer.system_interface_osp.SystemInterfaceOSP.html  sim_explorer.utils.json5.html  sim_explorer.utils.misc.html  sim_explorer.utils.osp.html  sim_explorer.utils.types.html
branch/main/_sources/: api.rst.txt  cli.sim_explorer.rst.txt  sim_explorer.rst.txt
branch/main/_sources/_autosummary/: sim_explorer.assertion.Assertion.rst.txt  sim_explorer.case.Case.rst.txt  sim_explorer.case.Cases.rst.txt  sim_explorer.case.Results.rst.txt  sim_explorer.case.rst.txt  sim_explorer.exceptions.rst.txt  sim_explorer.models.Temporal.rst.txt  sim_explorer.models.rst.txt  sim_explorer.simulator_interface.rst.txt  sim_explorer.system_interface_osp.SystemInterfaceOSP.rst.txt  (+7 more)
case_study/: __main__.py  assertion.py  case.py  cases.py  json5.py  simulator_interface.py
docs/source/: CHANGELOG.rst  README.rst  cases_specification.rst  cli.__main__.rst  cli.rst  conf.py  fileFormat.cases.rst  index.rst  modules.rst  sim-explorer.pptx  sim_explorer.rst
examples/: run_cases.py
sim_explorer/: __main__.py  assertion.py  case.py  json5.py  simulator_interface.py  utils.py
src/case_study/: case.py  json5.py
src/sim_explorer/: __init__.py  assertion.py  case.py  exceptions.py  json5.py  models.py  simulator_interface.py  system_interface.py  system_interface_osp.py
src/sim_explorer/cli/: __main__.py  display_results.py  sim_explorer.py
src/sim_explorer/utils/: __init__.py  assertion_results.py  codegen.py  json5.py  misc.py  osp.py  paths.py  types.py
tests/: bouncingBall.py  conftest.py  test_BouncingBall.py  test_OspSystemStructure.py  test_assertion.py  test_bouncing_ball_3d.py  test_case.py  test_cases.py  test_cli.py  test_json5.py  test_manipulator.py  test_mobileCrane.py  test_oscillator_fmu.py  test_osp_systemstructure.py  test_pyjson5.py  test_results.py  test_run_bouncingball0.py  test_run_mobilecrane.py  test_run_simpletable.py  test_simulator_interface.py  test_system_interface.py  test_system_interface_osp.py  test_utils.py
tests/OSP_MobileCrane/: MobileCrane.cases  MobileCrane.fmu  OspSystemStructure.xml  SimpleTable.fmu
tests/cli/: test_sim_explorer_cli.py
tests/data/: BouncingBall.cases  BouncingBall_0.cases  template.cases
tests/data/BouncingBall/: BouncingBall.fmu  BouncingBall.json  README.md  test_OspSystemStructure.py  test_bouncing.py
tests/data/BouncingBall0/: BouncingBall.cases  BouncingBall.fmu  OspSystemStructure.xml  results.js5  results_base.js5  results_gravity.js5  results_restitution.js5  results_restitutionAndGravity.js5
tests/data/BouncingBall3D/: BouncingBall.cases  BouncingBall3D.cases  BouncingBall3D.fmu  OspSystemStructure.xml  base.js5  bouncing_ball_3d.py  crane_table.xml  gravity.js5  restitution.js5  restitutionAndGravity.js5  systemModel.xml  test_case  test_case.js5  test_results  test_results.js5
tests/data/MobileCrane/: MobileCrane.cases  MobileCrane.fmu  OspSystemStructure.xml  crane_table.js5  crane_table.xml  mobile_crane.py  results_base.js5  results_static.js5
tests/data/Oscillator/: DrivingForce.fmu  ForcedOscillator.cases  ForcedOscillator.xml  HarmonicOscillator.fmu  OspSystemStructure.xml  driving_force_fmu.py  oscillator_fmu.py
tests/data/SimpleTable/: OspSystemStructure.xml  SimpleTable.fmu  results.js5  test.cases
tests/data/TimeTable/: OspSystemStructure.xml  TimeTableFMU.fmu  test.cases
tests/test_working_directory/: .gitignore
