[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sim-explorer"
version = "0.0.2b6"
description = "Experimentation tools on top of OSP simulation models."
authors = [
    { name = "Siegfried Eisinger", email = "Siegfried.Eisinger@DNV.com" },
]
readme = "README.rst"
requires-python = ">= 3.10,<3.12" # developed under 3.10.10!
keywords = [
    "simulation",
    "model",
    "FMI",
    "OSP",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.2",
    "libcosimpy>=0.0.2",
    "fmpy>=0.3.21",
    "matplotlib>=3.7.1",
    "pint>=0.24.3",
    "sympy>=1.13.3",
    "component-model>=0.0.1",
    "jsonpath-ng>=1.7.0",
]
#dynamic = ["version"]

[project.optional-dependencies]
modelTest = [
    "FMPy>=0.3.20",
    "matplotlib>=3.7.1",
]
rest = [
    "docutils>=0.20.1",
]
editor = [
    "thonny>=4.0.2",
]

[project.scripts]
sim_explorer = "sim_explorer.cli:cli_main"

[tool.setuptools]
packages = [
    "sim_explorer",
]
include-package-data = true


[tool.mypy]
exclude = [
    ".git",
    ".venv",
    ".tox",
    "build",
    "dist",
    "**/__pycache__",
    "./doc/source/conf.py",
    "./tests/data",
]
